# py-qss-preprocessor

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
src/qsspp/: __init__.py  cli.py  core.py
tools/: LICENSE_HEADER.txt
